--- a/index.html
+++ b/index.html
@@ -13,27 +13,36 @@
             <div class="container-header">
                 <div class="row">
                     <div class="col-logo">
-                        logo
+                        <img src="./img/logo.svg" alt="logo discord">
                     </div>
                     <div class="col-link">
                         <nav>
                             <ul>
-                                <li>link</li>
-                                <li class="padding-left">link</li>
-                                <li class="padding-left">link</li>
-                                <li class="padding-left">link</li>
-                                <li class="padding-left">link</li>
+                                <li>Scarica</li>
+                                <li class="padding-left">Perchè Discord</li>
+                                <li class="padding-left">Nitro</li>
+                                <li class="padding-left">Assistenza</li>
+                                <li class="padding-left">Sicurezza</li>
                             </ul>
                         </nav>
                     </div>
                     <div class="col-login">
-                        login
+                       <button class="Accedi">Accedi</button> 
                     </div>
                 </div>
             </div>
             <div class="container-title">
                 <div class="row-title">
-                    <div class="col-title"></div>
+                    <div class="col-title">
+                        <div class="title">
+                            <h1>Il tuo posto per parlare</h1>
+                            <p class="subtitle">Che tu faccia di un club scolastico, un gruppo di gamer, una community artistica <br> mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici che vuole passare del tempo <br> assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                            <div>
+                                <button class="Scarica">&#8595;Scarica per Windows</button>
+                                <button class="Apri">Apri Discord nel tuo browser</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
