--- a/index.html
+++ b/index.html
@@ -51,20 +51,47 @@
         <main>
             <div class="container-main">
                 <div class="row-main">
-                    <div class="col-img"></div>
-                    <div class="col-text"></div>
+                    <div class="col-img">
+                        <img src="./img/item1.svg" alt="iammgine 1">
+                    </div>
+                    <div class="col-text">
+                        <h2>
+                            Un luogo a <br> invito con tutto <br> lo spazio <br> necessario per <br> parlare
+                        </h2>
+                        <p>
+                            I server Discord sono organizzati <br> in canali tematici in cui puoi collaborare, <br> condividere o semplicemente parlare <br> della tua giornata senza intasare una <br> chat di gruppo.
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="container-grey">
                 <div class="row-main">
-                    <div class="col-text"></div>
-                    <div class="col-img"></div>
+                    <div class="col-text">
+                        <h2>
+                            Dove trovarsi è facile
+                        </h2>
+                        <p>
+                            Mettiti comodo in un canale vocale <br> quando hai tempo. Gli amici nel tuo <br> server possono vedere che sei lì e unirsi <br> istantaneamente senza dover chiamare.
+                        </p>
+                    </div>
+                    <div class="col-img">
+                        <img src="./img/item2.svg" alt="immagine 2">
+                    </div>
                 </div>
             </div>
             <div class="container-main">
                 <div class="row-main">
-                    <div class="col-img"></div>
-                    <div class="col-text"></div>
+                    <div class="col-img">
+                        <img src="./img/item3.svg" alt="immagine 3">
+                    </div>
+                    <div class="col-text">
+                        <h2>
+                            Da pochi a un fandom
+                        </h2>
+                        <p>
+                            Dai inizio a una community di qualsiasi <br> dimensione con strumenti di <br> moderazione e accesso ai membri <br> personalizzabile. Concedi ai membri <br> poteri speciali, crea canali privati e <br> molto altro.
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="container-grey">
