padding margin row

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="col-text">
                         <h2>
-                            Un luogo a <br> invito con tutto <br> lo spazio <br> necessario per <br> parlare
+                            Un luogo a invito con tutto lo spazio necessario per parlare
                         </h2>
                         <p>
                             I server Discord sono organizzati <br> in canali tematici in cui puoi collaborare, <br> condividere o semplicemente parlare <br> della tua giornata senza intasare una <br> chat di gruppo.
