--- a/index.html
+++ b/index.html
@@ -95,8 +95,14 @@
                 </div>
             </div>
             <div class="container-grey">
-                <div class="row-boxgreen">
-                    <div class="col-boxgreen"></div>
+                <div class="row-box">
+                    <div class="col-box">
+                        <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                        <p>
+                            Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+                        </p>
+                        <img src="./img/item4-big.svg" alt="immagine 4">
+                    </div>
                 </div>
             </div>
         </main>
