--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
                             Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
                         </p>
                         <img src="./img/item4-big.svg" alt="immagine 4">
+                        <h4>Pronto a iniziare la tua avventura?</h4>
+                        <div>
+                            <button class="Scarica2">&#8595;Scarica per Windows</button>
+                        </div>
                     </div>
                 </div>
             </div>
