--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
                         </p>
                         <img src="./img/item4-big.svg" alt="immagine 4">
-                        <h4>Pronto a iniziare la tua avventura?</h4>
+                        <h4 class="title-img">Pronto a iniziare la tua avventura?</h4>
                         <div>
                             <button class="Scarica2">&#8595;Scarica per Windows</button>
                         </div>
@@ -116,18 +116,61 @@
         <footer>
             <div class="container-menu">
                 <div class="row-menu">
-                    <div class="col-social"></div>
-                    <div class="col-menu"></div>
-                    <div class="col-menu"></div>
-                    <div class="col-menu"></div>
-                    <div class="col-menu"></div>
+                    <div class="col-social">
+                        <h4 class="titlefooter">Il tuo posto per parlare</h4>
+                        <div class="ita">
+                            <img class="imgita" src="./img/ita.png" alt="bandiera ita"> <span>Italiano</span>
+                        </div>
+                        social
+                    </div>
+                    <div class="col-menu">
+                        <h5>Prodotto</h5>
+                        <span>Scarica</span>
+                        <span>Perchè Discord</span>
+                        <span>Nitro</span>
+                        <span>Sicurezza</span>
+                        <span>Assistenza</span>
+                    </div>
+                    <div class="col-menu">
+                        <h5>Compagnia</h5>
+                        <span>Scarica</span>
+                        <span>Perchè Discord</span>
+                        <span>Nitro</span>
+                        <span>Sicurezza</span>
+                        <span>Assistenza</span>
+                    </div>
+                    <div class="col-menu">
+                        <h5>Risorse</h5>
+                        <span>Scarica</span>
+                        <span>Perchè Discord</span>
+                        <span>Nitro</span>
+                        <span>Sicurezza</span>
+                        <span>Assistenza</span>
+                        <span>Scarica</span>
+                        <span>Perchè Discord</span>
+                        <span>Nitro</span>
+                        <span>Sicurezza</span>
+                        <span>Assistenza</span>
+                    </div>
+                    <div class="col-menu">
+                        <h5>Norme</h5>
+                        <span>Scarica</span>
+                        <span>Perchè Discord</span>
+                        <span>Nitro</span>
+                        <span>Sicurezza</span>
+                        <span>Assistenza</span>
+                    </div>
                 </div>
             </div>
             <hr>
             <div class="container-footer">
                 <div class="row-footer">
-                    <div class="col-logo-footer"><span> Logo</span></div>
-                    <div class="col-button-footer"><span>Bottone</span></div>
+                    <div class="col-logo-footer">
+                        <img src="./img/logo.svg" alt="logo discord">
+                    </div>
+                    <div class="col-button-footer">
+                        <button class="Registrati">Registrati</button> 
+                    </div>
                 </div>
             </div>
         </footer>
