--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
                         <div class="ita">
                             <img class="imgita" src="./img/ita.png" alt="bandiera ita"> <span>Italiano</span>
                         </div>
-                        social
+                        <div>
+                            <img class="logosocial" src="./img/logo-social1png.png" alt="logo social">
+                        </div>
                     </div>
                     <div class="col-menu">
                         <h5>Prodotto</h5>
