--- a/index.html
+++ b/index.html
@@ -121,8 +121,11 @@
                         <div class="ita">
                             <img class="imgita" src="./img/ita.png" alt="bandiera ita"> <span>Italiano</span>
                         </div>
-                        <div>
-                            <img class="logosocial" src="./img/logo-social1png.png" alt="logo social">
+                        <div class="logosocial">
+                            <img class="padding-right" src="./img/facebook-svgrepo-com.svg" alt="fb">
+                            <img class="padding-right" src="./img/instagram-svgrepo-com.svg" alt="fb">
+                            <img class="padding-right" src="./img/twitter-svgrepo-com.svg" alt="fb">
+                            <img class="padding-right" src="./img/youtube-svgrepo-com.svg" alt="fb">
                         </div>
                     </div>
                     <div class="col-menu">
