font awsome arrow down

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
         <link href="http://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
         <title>Discord</title>
     </head>
     <body>
@@ -39,7 +40,7 @@
                             <h1>Il tuo posto per parlare</h1>
                             <p class="subtitle">Che tu faccia di un club scolastico, un gruppo di gamer, una community artistica <br> mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici che vuole passare del tempo <br> assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                             <div>
-                                <button class="Scarica">&#8595;Scarica per Windows</button>
+                                <button class="Scarica"><i class="fa-solid fa-arrow-down"></i> Scarica per Windows</button>
                                 <button class="Apri">Apri Discord nel tuo browser</button>
                             </div>
                         </div>
@@ -119,7 +120,7 @@
                     <div class="col-social">
                         <h4 class="titlefooter">Il tuo posto per parlare</h4>
                         <div class="ita">
-                            <img class="imgita" src="./img/ita.png" alt="bandiera ita"> <span>Italiano</span>
+                            <img class="imgita" src="./img/ita.png" alt="bandiera ita"> <span>Italiano <i class="fa-solid fa-angle-down"></i></span>
                         </div>
                         <div class="logosocial">
                             <img class="padding-right" src="./img/facebook-svgrepo-com.svg" alt="fb">
